[package]
name = "gp-example"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
# For WASM stuff
crate-type = ["cdylib", "rlib"]

[dependencies]
friedrich = {git = "https://github.com/Corwinpro/friedrich.git", branch = "dev/replace-std-time" }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.1", optional = true }
chrono = "0.4.31"
js-sys = "0.3.66"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
